--- a/lamp_simple/roles/db/tasks/main.yml
+++ b/lamp_simple/roles/db/tasks/main.yml
@@ -8,6 +8,8 @@
    - MySQL-python
    - libselinux-python
    - libsemanage-python
+  tags:
+    - already installed
 
 - name: Configure SELinux to start mysql on any port
   seboolean: name=mysql_connect_any state=true persistent=yes
