--- a/lamp_simple/roles/db/tasks/main.yml
+++ b/lamp_simple/roles/db/tasks/main.yml
@@ -19,6 +19,8 @@
   template: src=my.cnf.j2 dest=/etc/my.cnf
   notify:
   - restart mysql
+  tags:
+    - ignore
 
 - name: Start Mysql Service
   service: name=mysqld state=started enabled=yes
